...
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="@+id/tv_profile_item_name"
        app:layout_constraintStart_toStartOf="@+id/tv_profile_item_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_profile_item_name" />

    <ImageView
        android:id="@+id/iv_profile_item_delete"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_profile_item_position"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_profile_item_position"
...
