...
                android:id="@+id/btn_delete"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:paddingHorizontal="12dp"
                android:text="Delete"
                android:textAllCaps="false"
                android:textColor="#FF0000"
                android:textSize="12sp"
                app:backgroundTint="@color/transparent"
                app:cornerRadius="20dp"
                app:strokeColor="#FF0000"
...
